--- a/Example/Forms/DialogAbout.resx
+++ b/Example/Forms/DialogAbout.resx
@@ -117,26 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="folder_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\folder_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="StatusAnnotations_Information_16xMD_color" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\StatusAnnotations_Information_16xMD_color.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Close_16xLG" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Close_16xLG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="files" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Files_7954.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NewFile_6276" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\NewFile_6276.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="folder_closed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\folder_Closed_16xLG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="StatusAnnotations_Information_16xLG_color" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\StatusAnnotations_Information_16xLG_color.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAECAAAAEAIAAuAQAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgGAAAAH/P/YQAAAAFz
+        UkdCAK7OHOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAw0lEQVQ4T92TsQ0C
+        MQxFswcNm8ECTMA07IF0oqHNDFAhKCKKJGXIOxx08VkgQceXfuP/v+X4fE4j57yOMQ4ppTIlNTSxzVHF
+        ZTX64XQvq/2lLHbnjtTQ8OCV2BMSDpvDdRbU3B5vNAldE7oiaHODrksTP4Z5F6NpE2ywNDJkHcux3vyJ
+        ZMgyvmmADZYGyf5Dg3dLbLC01xJ//oygjuKtK2zQ9e6QAGdZC8G6Rk3zlIE0+e5nmoJ3sZxqHLfcSA1N
+        bALnHokvo216mLOQAAAAAElFTkSuQmCC
+</value>
   </data>
 </root>
